Tue 11 Dec 2012 22:04:00 GMT - Release 1.06
 Sort list of allowed methods. RT#81825

Mon  2 Jul 2012 20:13:00 BST - Release 1.05
 Bugfix get_allowed_methods list:
  * include HEAD
  * remove "not_implemented"

Sat  30 Jun 2012 10:25:00 BST - Release 1.04
 Bugfix to _dispatch_rest_method

Wed  28 Jun 2012 00:40:00 BST - Release 1.03
 Expose _get_allowed_methods to the API (wreis)

 Fix default OPTIONS handler: As the ->body is defined, then serialization
 won't happen and we don't get wrong responses. (wreis)

 Add default HEAD handler: auto dispatches to _GET method if it exists (wreis)

Tue  5 Jun 2012 22:23:00 BST - Release 1.02
 Fix forwarded REST methods, e.g. foo_GET to be more
 correctly displayed as a forward in the stats info.

 Make public response building methods for errors
 _unsupported_media_type and _serialize_bad_request which
 can be extended from an action-role to return custom
 error response.

Tue  29 May 2012 20:19:00 BST - Release 1.01
 Add Catalyst::Action::Deserialize::JSON::XS

 Fix JSON::XS useage to depend on JSON.pm v2.0, and rely on the
 fact that can be backed by XS code, by explicitly setting
 $ENV{'PERL_JSON_BACKEND'} = 2

Fri  13 Apr 2012 09:31:00 BST - Release 1.00
  Repack without auto_include to stop Module::Install inlining
  Test::More without Test::Builder. RT#76524

Tue  28 Feb 2012 09:09:00 GMT - Release 0.99
  Repack with new Module::Install to stop depending on an unnecessary
  ExtUtils::MakeMaker version.

Tue  21 Feb 2012 11:40:00 GMT - Release 0.98
  More fixes as per last release.

Tue  21 Feb 2012 09:58:00 GMT - Release 0.97
  Fix test with latest Catalyst version which passes _log into
  requests.

Mon  20 Jan 2012 11:22:00 GMT - Release 0.96
  Added fix for RT 63537 (from Gerv) and tests to check it.

Wed  04 Jan 2012 19:34:00 GMT - Release 0.95
  Fix regex for JSONP parameter name to be able to include the . character
  in Catalyst::Action::Serialize::JSONP. RT#73741
