@@ -9,7 +9,7 @@ BEGIN {
 extends 'Catalyst::Action::Deserialize::JSON';
 use JSON::XS ();
 
-our $VERSION = '1.06';
+our $VERSION = '1.07';
 $VERSION = eval $VERSION;
 
 __PACKAGE__->meta->make_immutable;
