@@ -1,3 +1,15 @@
+Thu 11 Apr 2012 20:20:00 BST - Release 1.07
+ Don't serialize if a view is explicitly set.
+
+   If the controller sets the view in $c->stash->{current_view} or
+   $c->stash->{current_view_instance}, then it is explicitly requesting a
+   certain kind of serialization and C::A::Serialize shouldn't override
+   that.
+
+ Remove Storable and FreezeThaw from the list
+ of serialization methods offered by default, and
+ from the docs - they're totally unsafe :/
+
 Tue 11 Dec 2012 22:04:00 GMT - Release 1.06
  Sort list of allowed methods. RT#81825
 
